--- a/index.html
+++ b/index.html
@@ -76,12 +76,11 @@
 
         <div class="contact">
           <div class="container">
-            <form action="" class="form">
+            <form action="index.html" class="form">
               <input class="form__user-name" type="text" placeholder="Name">
               <input class="form__user-email" type="email" placeholder="email address">
               <textarea class="form__user-message" cols="30" rows="5">Message</textarea>
               <button class="form__submit" type="submit"></button>
-              <!-- <input class="form__submit" type="submit"> -->
             </form>
           </div>
         </div> <!-- ./ contact -->
