--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style/main.css">
     <link rel="stylesheet" href="style/media.css">
     <link href="https://fonts.googleapis.com/css2?family=Cherry+Swash&display=swap" rel="stylesheet">
-    <title>Task 6</title>
+    <title>Black Sea</title>
   </head>
   <body>
     <div class="wrap">
@@ -19,72 +19,70 @@
             <a class="header__link" href="#">About me</a>
             <a class="header__link" href="#">Portfolio</a>
             <a class="header__link" href="#">Contact me</a>
-            <div class="header__nav-icon"></div>
+            <div class="header__burger-menu"></div>
           </nav>
         </div>
       </header> <!-- ./ header -->
 
-      <div class="content">
-        <div class="promo">
-          <div class="container">
-            <h2 class="promo__title">We need the tonic of wildness</h2>
+      <div class="promo">
+        <div class="container">
+          <h2 class="promo__title">We need the tonic of wildness</h2>
 
-            <button class="promo__btn">Read more</button>
+          <button class="promo__btn">Read more</button>
 
-            <ul class="promo__list">
-              <li class="promo__item"></li>
-              <li class="promo__item"></li>
-              <li class="promo__item"></li>
-              <li class="promo__item"></li>
-              <li class="promo__item"></li>
-            </ul>
-          </div>
-        </div> <!-- ./ promo -->
-
-        <main class="main">
-          <div class="container">
-            <h3>At the same time that we are earnest to explore & learn all things</h3>
-
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. Lorem Ipsum has been the industry's standard dummy text
-              ever since the 1500s, when an unknown printer took a galley of
-              type and scrambled it to make a type specimen book.</p>
-
-            <div class="main-list__icons">
-              <div class="main-icon icon-basket"></div>
-              <div class="main-icon icon-planet"></div>
-              <div class="main-icon icon-briefcase"></div>
-            </div>
-          </div>
-        </main> <!-- ./ main -->
-
-        <div class="testimonial">
-          <div class="container">
-
-            <div class="testimonial__avatar">
-              <img class="testimonial__dhavan" src="img/reviewers/dhavan.png" alt="Reviewer Dhavan">
-            </div>
-
-            <blockquote class="testimonial__review">Lorem Ipsum is simply dummy
-              text of the printing and typesetting industry. Lorem Ipsum has
-              been the industry's standard dummy text ever since the 1500s,
-              when an unknown printer took a galley of type and scrambled it to
-              a type specimen book. It has survived not only five centuries,
-              but also the leap into electronic typesetting</blockquote>
-          </div> <!-- ./ testimonial -->
+          <ul class="promo__list">
+            <li class="promo__item"></li>
+            <li class="promo__item"></li>
+            <li class="promo__item"></li>
+            <li class="promo__item"></li>
+            <li class="promo__item"></li>
+          </ul>
         </div>
+      </div> <!-- ./ promo -->
 
-        <div class="contact">
-          <div class="container">
-            <form action="index.html" class="form">
-              <input class="form__user-name" type="text" placeholder="Name">
-              <input class="form__user-email" type="email" placeholder="email address">
-              <textarea class="form__user-message" cols="30" rows="5">Message</textarea>
-              <button class="form__submit" type="submit"></button>
-            </form>
+      <main class="main">
+        <div class="container">
+          <h3>At the same time that we are earnest to explore & learn all things</h3>
+
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text
+            ever since the 1500s, when an unknown printer took a galley of
+            type and scrambled it to make a type specimen book.</p>
+
+          <div class="main-list__icons">
+            <div class="main-icon icon-basket"></div>
+            <div class="main-icon icon-planet"></div>
+            <div class="main-icon icon-briefcase"></div>
           </div>
-        </div> <!-- ./ contact -->
-      </div> <!-- ./ content -->
+        </div>
+      </main> <!-- ./ main -->
+
+      <div class="testimonial">
+        <div class="container">
+
+          <div class="testimonial__avatar">
+            <img class="testimonial__dhavan" src="img/reviewers/dhavan.png" alt="Reviewer Dhavan">
+          </div>
+
+          <blockquote class="testimonial__review">Lorem Ipsum is simply dummy
+            text of the printing and typesetting industry. Lorem Ipsum has
+            been the industry's standard dummy text ever since the 1500s,
+            when an unknown printer took a galley of type and scrambled it to
+            a type specimen book. It has survived not only five centuries,
+            but also the leap into electronic typesetting</blockquote>
+        </div> <!-- ./ testimonial -->
+      </div>
+
+      <div class="contact">
+        <div class="container">
+          <form action="index.html" class="form">
+            <input class="form__user-name" type="text" placeholder="Name">
+            <input class="form__user-email" type="email" placeholder="email address">
+            <textarea class="form__user-message" rows="5"> Message</textarea>
+            <button class="form__submit" type="submit"></button>
+          </form>
+        </div>
+      </div> <!-- ./ contact -->
 
       <footer class="footer">
         <div class="container">
